Added Ef core and scaffold to database

--- a/BookStoreApp.Api/appsettings.json
+++ b/BookStoreApp.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BookStoreAppDbConnection": "Server=MD;Database=BookStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
