End Of Section10

--- a/BookStoreApp.Blazor.Server.UI/Properties/launchSettings.json
+++ b/BookStoreApp.Blazor.Server.UI/Properties/launchSettings.json
@@ -3,25 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:38444",
-      "sslPort": 44344
+      "applicationUrl": "http://localhost:42027",
+      "sslPort": 44362
     }
   },
   "profiles": {
-    "http": {
+    "BookStoreApp.Blazor.Server.UI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5048",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:7296;http://localhost:5048",
+      "applicationUrl": "https://localhost:7190;http://localhost:5190",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
