--- a/BookStoreApp.Api/Properties/launchSettings.json
+++ b/BookStoreApp.Api/Properties/launchSettings.json
@@ -4,27 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:15871",
-      "sslPort": 44349
+      "applicationUrl": "http://localhost:6212",
+      "sslPort": 44307
     }
   },
   "profiles": {
-    "http": {
+    "BookStoreApp.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5169",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7092;http://localhost:5169",
+      "applicationUrl": "https://localhost:7024;http://localhost:5024",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
