--- a/BookStoreApp.Api/appsettings.json
+++ b/BookStoreApp.Api/appsettings.json
@@ -20,15 +20,13 @@
       },
       {
         "Name": "Seq",
-        "Args": {
-          "serverUrl": "http://localhost:5341"
-        }
+        "Args": { "serverUrl": "http://localhost:5341" }
       }
     ]
   },
   "JwtSettings": {
     "Issuer": "BookStoreAPI",
-    "Audience": "BookStoreApiClient",
+    "Audience": "BookStpreApiClient",
     "Duration": 1
   },
   "AllowedHosts": "*"
